--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Альянсы</title>
+  <title>Игра со странами и альянсами</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
@@ -21,40 +21,113 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    async function createAlliance(name) {
-      await addDoc(collection(db, "alliances"), {
-        name: name,
-        createdAt: new Date()
+    // Страны
+    const countries = [
+      "Албания","Андорра","Австрия","Беларусь","Бельгия","Болгария",
+      "Хорватия","Чехия","Дания","Эстония","Финляндия","Франция",
+      "Германия","Греция","Венгрия","Исландия","Ирландия","Италия",
+      "Латвия","Литва","Люксембург","Мальта","Молдавия","Монако",
+      "Черногория","Нидерланды","Северная Македония","Норвегия",
+      "Польша","Португалия"
+    ];
+
+    const codes = {
+      "ALB123": "albania.html","AND456": "andorra.html","AUT789": "austria.html",
+      "BLR321": "belarus.html","BEL654": "belgium.html","BGR987": "bulgaria.html",
+      "HRV147": "croatia.html","CZE258": "czechia.html","DNK369": "denmark.html",
+      "EST741": "estonia.html","FIN852": "finland.html","FRA963": "france.html",
+      "GER159": "germany.html","GRC357": "greece.html","HUN753": "hungary.html",
+      "ISL951": "iceland.html","IRL147": "ireland.html","ITA258": "italy.html",
+      "LVA369": "latvia.html","LTU741": "lithuania.html","LUX852": "luxembourg.html",
+      "MLT963": "malta.html","MDA159": "moldova.html","MCO357": "monaco.html",
+      "MNE753": "montenegro.html","NLD951": "netherlands.html","MKD147": "northmacedonia.html",
+      "NOR258": "norway.html","POL369": "poland.html","PRT741": "portugal.html"
+    };
+
+    // Рендер списка стран
+    function renderCountries() {
+      const list = document.getElementById("countryList");
+      countries.forEach(c => {
+        const div = document.createElement("div");
+        div.className = "country-card";
+        div.innerHTML = `<h2>${c}</h2><div class="status">– не занято</div>`;
+        list.appendChild(div);
       });
-      alert("Альянс создан: " + name);
+    }
+
+    // Переход по коду страны
+    function goToCountry() {
+      const val = document.getElementById("codeInput").value.trim().toUpperCase();
+      if(!val){ alert("Введите код"); return; }
+      if(codes[val]){
+        window.location.href = codes[val];
+      } else {
+        alert("Код не найден");
+      }
+    }
+
+    // Firestore: создать альянс
+    async function createAlliance(name) {
+      await addDoc(collection(db, "alliances"), { name, createdAt: new Date() });
+      document.getElementById("allianceName").value = "";
       loadAlliances();
     }
 
+    // Firestore: загрузить список альянсов
     async function loadAlliances() {
-      const alliancesList = document.getElementById("alliances");
-      alliancesList.innerHTML = "";
-      const querySnapshot = await getDocs(collection(db, "alliances"));
-      querySnapshot.forEach(doc => {
+      const list = document.getElementById("alliances");
+      list.innerHTML = "";
+      const snapshot = await getDocs(collection(db, "alliances"));
+      snapshot.forEach(doc => {
         const li = document.createElement("li");
         li.textContent = doc.data().name;
-        alliancesList.appendChild(li);
+        list.appendChild(li);
       });
     }
 
     window.onload = () => {
+      renderCountries();
+      loadAlliances();
+      document.getElementById("goBtn").onclick = goToCountry;
       document.getElementById("createBtn").onclick = () => {
         const name = document.getElementById("allianceName").value.trim();
         if(name) createAlliance(name);
       };
-      loadAlliances();
     };
   </script>
+  <style>
+    body { background:#111; color:#eee; font-family:Arial; padding:20px; }
+    h1 { text-align:center; }
+    .input-box { text-align:center; margin-bottom:20px; }
+    input { padding:10px; border-radius:5px; border:none; width:200px; }
+    button { padding:10px 15px; margin-left:10px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; }
+    button:hover { background:#45a049; }
+    .container { max-width:900px; margin:auto; }
+    .country-list { display:grid; grid-template-columns:repeat(auto-fill,minmax(250px,1fr)); gap:15px; }
+    .country-card { background:#2a2a2a; padding:15px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5); }
+    .country-card h2 { margin:0; }
+    .status { color:#ccc; font-size:14px; }
+    .alliances-section { margin-top:40px; }
+  </style>
 </head>
-<body style="background:#111;color:#eee;font-family:Arial;padding:20px">
-  <h1>Альянсы</h1>
-  <input id="allianceName" placeholder="Название альянса" />
-  <button id="createBtn">Создать альянс</button>
-  <h2>Список альянсов:</h2>
-  <ul id="alliances"></ul>
+<body>
+  <h1>Игра со странами и альянсами</h1>
+
+  <div class="input-box">
+    <input type="text" id="codeInput" placeholder="Введите код страны">
+    <button id="goBtn">Перейти</button>
+  </div>
+
+  <div class="container">
+    <h2>Список стран</h2>
+    <div class="country-list" id="countryList"></div>
+
+    <div class="alliances-section">
+      <h2>Альянсы</h2>
+      <input id="allianceName" placeholder="Название альянса">
+      <button id="createBtn">Создать альянс</button>
+      <ul id="alliances"></ul>
+    </div>
+  </div>
 </body>
 </html>
