--- a/lithuania.html
+++ b/lithuania.html
@@ -5,7 +5,7 @@
 <title>Литва</title>
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+import { getFirestore, doc, getDoc, setDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
 // Firebase config
 const firebaseConfig = {
@@ -21,109 +21,56 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-const countryCode = "LTU"; // Код страны
+const countryId = "lithuania"; // ID документа страны
 
-// Создание альянса
-async function createAlliance(name) {
-  await addDoc(collection(db, "alliances"), {
-    name,
-    creator: countryCode,
-    members: [countryCode],
-    createdAt: new Date()
-  });
-  alert(`Альянс ${name} создан`);
-  loadMailbox();
+// Загружаем статистику
+async function loadStats() {
+  const ref = doc(db, "countries", countryId);
+  const snap = await getDoc(ref);
+
+  if (snap.exists()) {
+    const data = snap.data();
+    document.getElementById("money").textContent = data.money ?? 0;
+    document.getElementById("army").textContent = data.army ?? 0;
+    document.getElementById("income").textContent = data.income ?? 0;
+  } else {
+    // если страны нет в базе — создаём
+    await setDoc(ref, { money: 0, army: 0, income: 0 });
+    loadStats();
+  }
 }
 
-// Запрос на вступление в альянс
-async function requestJoinAlliance(allianceName) {
-  const snapshot = await getDocs(collection(db, "alliances"));
-  let creator = null;
-  snapshot.forEach(doc => {
-    const data = doc.data();
-    if(data.name === allianceName) creator = data.creator;
-  });
-  if(!creator){ alert("Альянс не найден"); return; }
-
-  await addDoc(collection(db, "mailbox"), {
-    to: creator,
-    from: countryCode,
-    type: "invite",
-    alliance: allianceName,
-    message: `Страна ${countryCode} хочет вступить в альянс ${allianceName}`,
-    createdAt: new Date()
-  });
-  alert("Запрос отправлен");
-}
-
-// Объявление войны
-async function declareWar(targetCode) {
-  await addDoc(collection(db, "mailbox"), {
-    to: targetCode,
-    from: countryCode,
-    type: "war",
-    message: `Страна ${countryCode} объявляет вам войну! У вас есть день на подготовку.`,
-    createdAt: new Date()
-  });
-  alert("Война объявлена");
-}
-
-// Загрузка почты
-async function loadMailbox() {
-  const mailboxEl = document.getElementById("mailbox");
-  mailboxEl.innerHTML = "";
-  const snapshot = await getDocs(collection(db, "mailbox"));
-  snapshot.forEach(doc => {
-    const data = doc.data();
-    if(data.to === countryCode){
-      const li = document.createElement("li");
-      li.textContent = `[${data.type.toUpperCase()}] ${data.message}`;
-      mailboxEl.appendChild(li);
-    }
-  });
+// Пример функции изменения денег
+async function addMoney() {
+  const ref = doc(db, "countries", countryId);
+  await updateDoc(ref, { money: (parseInt(document.getElementById("money").textContent) || 0) + 10 });
+  loadStats();
 }
 
 window.onload = () => {
-  document.getElementById("createBtn").onclick = () => {
-    const name = document.getElementById("allianceName").value.trim();
-    if(name) createAlliance(name);
-  };
-  document.getElementById("joinBtn").onclick = () => {
-    const name = document.getElementById("joinName").value.trim();
-    if(name) requestJoinAlliance(name);
-  };
-  document.getElementById("warBtn").onclick = () => {
-    const target = document.getElementById("warTarget").value.trim().toUpperCase();
-    if(target) declareWar(target);
-  };
-  loadMailbox();
+  loadStats();
+  document.getElementById("btnMoney").onclick = addMoney;
 };
 </script>
 <style>
-body{background:#111;color:#eee;font-family:Arial;padding:20px;}
-.container{max-width:700px;margin:auto;}
-h1{text-align:center;}
-input,button{padding:10px;margin:5px;border-radius:5px;border:none;}
-button{background:#4caf50;color:#fff;cursor:pointer;}
-button:hover{background:#45a049;}
-#mailbox{margin-top:20px;list-style:none;padding:0;}
-.stat{margin-bottom:10px;}
+body { background:#111; color:#eee; font-family:Arial; padding:20px; }
+h1 { text-align:center; }
+.stats { background:#2a2a2a; padding:15px; border-radius:10px; max-width:400px; margin:auto; }
+.stats div { margin:5px 0; }
+button { padding:10px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; margin-top:10px; }
+button:hover { background:#45a049; }
 </style>
 </head>
 <body>
-<div class="container">
 <h1>Литва</h1>
-<div class="stat">Деньги: 00 | Армия: 00 | Доход в день: 00</div>
+<div class="stats">
+  <div>Деньги: <span id="money">00</span></div>
+  <div>Армия: <span id="army">00</span></div>
+  <div>Доход: <span id="income">00</span></div>
+</div>
 
-<h2>Альянсы</h2>
-<input id="allianceName" placeholder="Название альянса"><button id="createBtn">Создать альянс</button><br>
-<input id="joinName" placeholder="Вступить в альянс"><button id="joinBtn">Отправить запрос</button>
-
-<h2>Объявить войну</h2>
-<input id="warTarget" placeholder="Код страны"><button id="warBtn">Объявить войну</button>
-
-<h2>Почта</h2>
-<ul id="mailbox"></ul>
+<div style="text-align:center;">
+  <button id="btnMoney">+10 денег</button>
 </div>
 </body>
 </html>
