--- a/lithuania.html
+++ b/lithuania.html
@@ -1,11 +1,11 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
 <title>Литва</title>
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getFirestore, doc, getDoc, setDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, addDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
 // Firebase config
 const firebaseConfig = {
@@ -21,9 +21,9 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-const countryId = "lithuania"; // ID документа страны
+const countryId = "lithuania";
 
-// Загружаем статистику
+// Загружаем статистику страны
 async function loadStats() {
   const ref = doc(db, "countries", countryId);
   const snap = await getDoc(ref);
@@ -35,40 +35,85 @@ async function loadStats() {
     document.getElementById("income").textContent = data.income ?? 0;
     document.getElementById("alliance").textContent = data.alliance ?? "нет";
   } else {
-    // если страны нет в базе — создаём
     await setDoc(ref, { money: 0, army: 0, income: 0, alliance: "нет" });
     loadStats();
   }
 }
 
-// Убрать страну из альянса (например, админ)
-async function removeFromAlliance() {
+// Создать альянс
+async function createAlliance() {
+  const name = prompt("Введите название альянса:");
+  if (!name) return;
+
   const ref = doc(db, "countries", countryId);
-  await updateDoc(ref, { alliance: "нет" });
+  await updateDoc(ref, { alliance: name });
+  alert("Альянс создан: " + name);
   loadStats();
 }
 
-// Выйти из альянса (для игрока)
-async function leaveAlliance() {
+// Вступить в альянс (по приглашению)
+async function joinAlliance(name) {
   const ref = doc(db, "countries", countryId);
-  await updateDoc(ref, { alliance: "нет" });
+  await updateDoc(ref, { alliance: name });
+  alert("Вы вступили в альянс: " + name);
   loadStats();
+}
+
+// Объявить войну
+async function declareWar() {
+  const enemy = prompt("Введите страну, которой хотите объявить войну:");
+  if (!enemy) return;
+
+  await addDoc(collection(db, "messages"), {
+    to: enemy,
+    from: countryId,
+    type: "war",
+    text: `Страна ${countryId} объявляет вам войну!`,
+    date: new Date().toISOString()
+  });
+
+  alert("Война объявлена стране: " + enemy);
+}
+
+// Загрузить входящие сообщения
+async function loadMessages() {
+  const q = query(collection(db, "messages"), where("to", "==", countryId));
+  const snaps = await getDocs(q);
+
+  const box = document.getElementById("mail");
+  box.innerHTML = "";
+
+  snaps.forEach(docSnap => {
+    const data = docSnap.data();
+    const div = document.createElement("div");
+    div.className = "mailItem";
+    div.textContent = `[${data.type}] ${data.text}`;
+    if (data.type === "invite") {
+      const btn = document.createElement("button");
+      btn.textContent = "Принять";
+      btn.onclick = () => joinAlliance(data.alliance);
+      div.appendChild(btn);
+    }
+    box.appendChild(div);
+  });
 }
 
 window.onload = () => {
   loadStats();
-  document.getElementById("btnRemove").onclick = removeFromAlliance;
-  document.getElementById("btnLeave").onclick = leaveAlliance;
+  loadMessages();
+  document.getElementById("btnAlliance").onclick = createAlliance;
+  document.getElementById("btnWar").onclick = declareWar;
 };
 </script>
 <style>
 body { background:#111; color:#eee; font-family:Arial; padding:20px; }
 h1 { text-align:center; }
-.stats { background:#2a2a2a; padding:15px; border-radius:10px; max-width:400px; margin:auto; }
+.stats { background:#2a2a2a; padding:15px; border-radius:10px; max-width:500px; margin:auto; }
 .stats div { margin:5px 0; }
-button { padding:10px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; margin:5px; }
+button { padding:8px 12px; border:none; border-radius:5px; background:#4caf50; color:#fff; cursor:pointer; margin:5px; }
 button:hover { background:#45a049; }
-.buttons { text-align:center; margin-top:15px; }
+.mail { background:#222; margin-top:20px; padding:10px; border-radius:8px; max-width:500px; margin:auto; }
+.mailItem { background:#333; padding:8px; border-radius:5px; margin-bottom:6px; }
 </style>
 </head>
 <body>
@@ -80,9 +125,14 @@ button:hover { background:#45a049; }
   <div>Альянс: <span id="alliance">нет</span></div>
 </div>
 
-<div class="buttons">
-  <button id="btnRemove">Убрать из альянса</button>
-  <button id="btnLeave">Выйти из альянса</button>
+<div style="text-align:center; margin-top:15px;">
+  <button id="btnAlliance">Создать альянс</button>
+  <button id="btnWar">Объявить войну</button>
+</div>
+
+<div id="mail" class="mail">
+  <h3>Почта</h3>
+  <!-- Сообщения будут загружаться сюда -->
 </div>
 </body>
 </html>
